Fix minor issues reported by error-prone